// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Accordion renders correctly 1`] = `
<div
  class="ecl-accordion"
  data-ecl-accordion="true"
>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--digital"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example"
    role="region"
  >
    The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
  </div>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example2"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--energy"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Energy union and climate
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example2"
    role="region"
  >
    A balanced and progressive trade policy to harness globalisation
  </div>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example3"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--regulation"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example3"
    role="region"
  >
    In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
  </div>
</div>
`;

exports[`EC - Accordion renders correctly with extra attributes 1`] = `
<div
  class="ecl-accordion"
  data-ecl-accordion="true"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--digital"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example"
    role="region"
  >
    The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
  </div>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example2"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--energy"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Energy union and climate
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example2"
    role="region"
  >
    A balanced and progressive trade policy to harness globalisation
  </div>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example3"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--regulation"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example3"
    role="region"
  >
    In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
  </div>
</div>
`;

exports[`EC - Accordion renders correctly with extra class names 1`] = `
<div
  class="ecl-accordion custom-class custom-class--test"
  data-ecl-accordion="true"
>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--digital"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example"
    role="region"
  >
    The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
  </div>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example2"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--energy"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Energy union and climate
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example2"
    role="region"
  >
    A balanced and progressive trade policy to harness globalisation
  </div>
  <h3
    class="ecl-accordion__title"
  >
    <button
      aria-controls="accordion-example3"
      class="ecl-button ecl-button--ghost ecl-accordion__toggle"
      data-ecl-accordion-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
          focusable="false"
        >
          <use
            xlink:href="static/icons#general--regulation"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label=""
        >
          Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
        </span>
      </span>
    </button>
  </h3>
  <div
    class="ecl-accordion__content"
    hidden=""
    id="accordion-example3"
    role="region"
  >
    In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
  </div>
</div>
`;
